fixed issue that query parameters double url encoded

--- a/modules/swagger-codegen/src/main/resources/python/swagger.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/swagger.mustache
@@ -103,9 +103,9 @@ class ApiClient(object):
         string -- quoted value
     """
     if type(obj) == list:
-      return urllib.quote(','.join(obj))
+      return ','.join(obj)
     else:
-      return urllib.quote(str(obj))
+      return str(obj)
 
   @staticmethod
   def sanitizeForSerialization(obj):
