--- a/modules/swagger-codegen/src/main/resources/JavaJaxRS/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/JavaJaxRS/model.mustache
@@ -26,7 +26,7 @@ public class {{classname}} {{#parent}}extends {{{parent}}}{{/parent}} {
    * minimum: {{minimum}}{{/minimum}}{{#maximum}}
    * maximum: {{maximum}}{{/maximum}}
    **/
-  @ApiModelProperty(required = {{required}}, value = "{{{description}}}")
+  @ApiModelProperty({{#required}}required = {{required}}, {{/required}}value = "{{{description}}}")
   @JsonProperty("{{name}}")
   public {{{datatypeWithEnum}}} {{getter}}() {
     return {{name}};
