added property file

--- a/modules/swagger-codegen/src/main/resources/JavaSpringfox/SwaggerConfig.mustache
+++ b/modules/swagger-codegen/src/main/resources/JavaSpringfox/SwaggerConfig.mustache
@@ -3,6 +3,7 @@ package {{configPackage}};
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.PropertySource;
 import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 import springfox.documentation.service.ApiInfo;
 import springfox.documentation.spi.DocumentationType;
@@ -14,6 +15,7 @@ import springfox.documentation.swagger2.annotations.EnableSwagger2;
 @ComponentScan(basePackages = "{{apiPackage}}")
 @EnableWebMvc
 @EnableSwagger2 //Loads the spring beans required by the framework
+@PropertySource("classpath:swagger.properties")
 public class SwaggerConfig {
 
     @Bean
