--- a/modules/swagger-codegen/src/main/resources/htmlDocs/index.mustache
+++ b/modules/swagger-codegen/src/main/resources/htmlDocs/index.mustache
@@ -13,7 +13,7 @@
     <div class="license-info">{{{licenseInfo}}}</div>
     <div class="license-url">{{{licenseUrl}}}</div>
   <h2>Access</h2>
-  <div class="method-summary">Access to the API requires an api key to be provided by {{partner}} for all requests.  The api key is passed as a header with the name `api_key` and the value provided by Reverb Technologies, Inc.  Unless otherwise agreed upon, access to the Reverb API is intended solely for usage by {{partner}} and not third parties.</div>
+  <div class="method-summary">Customize this message as you see fit!</div>
   <h2>Methods</h2>
   {{#apiInfo}}
   {{#apis}}
