added spring-mvc sample

--- a/modules/swagger-codegen/src/main/resources/JavaSpringMVC/swaggerConfig.mustache
+++ b/modules/swagger-codegen/src/main/resources/JavaSpringMVC/swaggerConfig.mustache
@@ -22,7 +22,7 @@ public class SwaggerConfig {
     ApiInfo apiInfo() {
         ApiInfo apiInfo = new ApiInfo(
         "{{appName}}",
-        "{{appDescription}}",
+        "{{{appDescription}}}",
         "{{appVersion}}",
         "{{infoUrl}}",
         "{{infoEmail}}",
