name rebuilds, tests

--- a/modules/swagger-codegen/src/main/resources/JavaSpringMVC/pom.mustache
+++ b/modules/swagger-codegen/src/main/resources/JavaSpringMVC/pom.mustache
@@ -47,7 +47,7 @@
             <id>start-jetty</id>
             <phase>pre-integration-test</phase>
             <goals>
-              <goal>run</goal>
+              <goal>start</goal>
             </goals>
             <configuration>
               <scanIntervalSeconds>0</scanIntervalSeconds>
