fixed form, model request

--- a/modules/swagger-codegen/src/main/resources/php/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/api.mustache
@@ -72,21 +72,17 @@ class {{classname}} {
         $formParams['{{baseName}}'] = {{#isFile}}'@' . {{/isFile}}$this->apiClient->toFormValue(${{paramName}});
       }{{/formParams}}
       {{#bodyParams}}// body params
-      $body = null;
       if (isset(${{paramName}})) {
-        $body = ${{paramName}};
+        $httpBody = ${{paramName}};
       }{{/bodyParams}}
 
-      // for HTTP post (form)
-      $body = $body ?: $formParams;
-
-      if (strpos($headerParams['Content-Type'], "application/x-www-form-urlencoded") > -1) {
-        $body = http_build_query($body);
+      if (count($formParams) > 0) {
+        $httpBody = $formParams;
       }
 
       // make the API Call
       $response = $this->apiClient->callAPI($resourcePath, $method,
-                                            $queryParams, $body,
+                                            $queryParams, $httpBody,
                                             $headerParams);
 
       {{#returnType}}if(! $response) {
