--- a/modules/swagger-codegen/src/main/resources/php/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/api.mustache
@@ -73,19 +73,12 @@ class {{classname}} {
         $formParams['{{baseName}}'] = {{#isFile}}'@' . {{/isFile}}$this->apiClient->toFormValue(${{paramName}});
       }{{/formParams}}
       {{#bodyParams}}// body params
-      $body = null;
       if (isset(${{paramName}})) {
-        $body = ${{paramName}};
+        $httpBody = ${{paramName}};
       }{{/bodyParams}}
 
-      // for model (json/xml)
-      if (isset($body)) {
-        $httpBody = $body; // $body is the method argument, if present
-      }
-      
-      // for HTTP post (form)
-      if (strpos($headerParams['Content-Type'], "application/x-www-form-urlencoded") > -1) {
-        $httpBody = http_build_query($formParams);
+      if (count($formParams) > 0) {
+        $httpBody = $formParams;
       }
 
       // make the API Call
