update comment for escapeString

--- a/modules/swagger-codegen/src/main/resources/csharp/apiInvoker.mustache
+++ b/modules/swagger-codegen/src/main/resources/csharp/apiInvoker.mustache
@@ -26,7 +26,7 @@
       }
 
       /// <summary>
-      /// escape string (deprecated, will be removed in future release)
+      /// escape string (url-encoded)
       /// </summary>
       /// <param name="str"> String to be escaped
       /// <returns>Escaped string</returns>
