Fixed request content-type in objc client.
In api.mustache the name of content-type is `Content-Type`,
but in swagger.mustache the name of content-type is `Content-type`.

--- a/modules/swagger-codegen/src/main/resources/python/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/api.mustache
@@ -65,8 +65,11 @@ class {{classname}}(object):
         files = {}
         bodyParam = None
 
-        headerParams['Accept'] = '{{#produces}}{{mediaType}}{{#hasMore}},{{/hasMore}}{{/produces}}'
-        headerParams['Content-Type'] = '{{#consumes}}{{mediaType}}{{#hasMore}},{{/hasMore}}{{/consumes}}'
+        accepts = [{{#produces}}'{{mediaType}}'{{#hasMore}}, {{/hasMore}}{{/produces}}]
+        headerParams['Accept'] = ', '.join(accepts)
+
+        content_types = [{{#consumes}}'{{mediaType}}'{{#hasMore}}, {{/hasMore}}{{/consumes}}]
+        headerParams['Content-Type'] = content_types[0] if len(content_types) > 0 else 'application/json'
 
         {{#queryParams}}
         if ('{{paramName}}' in params):
