Fix hard-coded values in Ruby client: scheme, host and base_path

--- a/modules/swagger-codegen/src/main/resources/ruby/swagger/configuration.mustache
+++ b/modules/swagger-codegen/src/main/resources/ruby/swagger/configuration.mustache
@@ -8,9 +8,9 @@ module Swagger
     # Defaults go in here..
     def initialize
       @format = 'json'
-      @scheme = 'http'
-      @host = 'petstore.swagger.io'
-      @base_path = '/v2'
+      @scheme = '{{scheme}}'
+      @host = '{{host}}'
+      @base_path = '{{contextPath}}'
       @user_agent = "ruby-swagger-#{Swagger::VERSION}"
       @inject_format = false
       @force_ending_format = false
