Scripting API: Updated our swagger-codegen with our formatting

--- a/modules/swagger-codegen/src/main/resources/Java/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/Java/api.mustache
@@ -28,6 +28,10 @@ public class {{classname}} {
     return apiInvoker;
   }
 
+  public {{classname}}(String basePath) {
+    this.basePath = basePath;
+  }
+
   public void setBasePath(String basePath) {
     this.basePath = basePath;
   }
