--- a/modules/swagger-codegen/src/main/resources/android-java/jsonUtil.mustache
+++ b/modules/swagger-codegen/src/main/resources/android-java/jsonUtil.mustache
@@ -1,20 +1,17 @@
 package {{invokerPackage}};
 
-import com.fasterxml.jackson.annotation.*;
-import com.fasterxml.jackson.databind.*;
-import com.fasterxml.jackson.databind.annotation.JsonSerialize;
-import com.fasterxml.jackson.core.JsonGenerator.Feature;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 
 public class JsonUtil {
-  public static ObjectMapper mapper;
+  public static GsonBuilder gsonBuilder;
 
   static {
-    mapper = new ObjectMapper();
-    mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
-    mapper.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
+    gsonBuilder = new GsonBuilder();
+    gsonBuilder.serializeNulls();
   }
 
-  public static ObjectMapper getJsonMapper() {
-    return mapper;
+  public static Gson getGson() {
+    return gsonBuilder.create();
   }
-}
+};
